tests/paczka1/small_fuzzy/15966770.err
Error in line 7: S756 S14 32,3
Error in line 5: WqQnv4Rz6v1 S14 52,2
Error in line 6: zHH S463 39,4
Error in line 8: S756 S756 671,3
